--- a/08_training_datasets.ipynb
+++ b/08_training_datasets.ipynb
@@ -122,11 +122,18 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def get_mgrid(sidelen_tuple):\n",
-    "    '''Generates a flattened grid of (t,x,y,...) coordinates in a range of -1 to 1.\n",
+    "def get_mgrid(sidelen_tuple, tcoord_range=None):\n",
+    "    '''Generates a flattened grid of (t,x,y) coordinates in a range of -1 to 1.\n",
     "    sidelen_tuple: tuple of coordinate side lengths (t,x,y)\n",
     "    '''\n",
-    "    tensors = tuple([torch.linspace(-1, 1, steps=sidelen) for sidelen in sidelen_tuple])\n",
+    "    if tcoord_range is None:\n",
+    "        tensors = tuple([torch.linspace(-1, 1, steps=sidelen_tuple[0]),\n",
+    "                         torch.linspace(-1, 1, steps=sidelen_tuple[1]),\n",
+    "                         torch.linspace(-1, 1, steps=sidelen_tuple[2])])\n",
+    "    else:\n",
+    "        tensors = tuple([torch.linspace(*tcoord_range, steps=sidelen_tuple[0]),\n",
+    "                         torch.linspace(-1, 1, steps=sidelen_tuple[1]),\n",
+    "                         torch.linspace(-1, 1, steps=sidelen_tuple[2])])\n",
     "    mgrid = torch.stack(torch.meshgrid(*tensors), dim=-1)\n",
     "    mgrid = mgrid.reshape(-1, len(sidelen_tuple))\n",
     "    return mgrid\n",
@@ -139,9 +146,12 @@
     "        self.ydim = ydim\n",
     "        self.xrange = xrange\n",
     "        self.time_axis_scale = time_axis_scale\n",
+    "        self.time_chunk_duration_s = time_chunk_duration_s\n",
+    "        self.time_chunk_stride_s = time_chunk_stride_s\n",
+    "        self.t_coords_per_second = 10 * time_axis_scale\n",
     "        \n",
-    "        self.video_chunk_timeranges = list((start, start+time_chunk_duration_s) for start in\n",
-    "                                           range(start_s, end_s - time_chunk_duration_s, time_chunk_stride_s))\n",
+    "        self.video_chunk_timeranges = np.array(list((start, start+time_chunk_duration_s) for start in\n",
+    "                                                    range(start_s, end_s - time_chunk_duration_s, time_chunk_stride_s)))\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.video_chunk_timeranges)\n",
@@ -155,8 +165,15 @@
     "                                              start_s=item_start_s, duration_s=(item_end_s - item_start_s), \n",
     "                                              time_axis_scale=self.time_axis_scale, target_graph_key=\"clipped_image_tensor\")\n",
     "        \n",
-    "        # TODO: Decide on method for sharing the range of encoded time coordinates across chunks\n",
-    "        all_coords = get_mgrid(full_wf_tensor.shape)\n",
+    "        # For now, abstract time coordinates will be in centered minutes (so a 2 minute video spans -1 to 1, and a 30 minute video spans -15 to 15)\n",
+    "        full_duration_s = self.video_chunk_timeranges.max() - self.video_chunk_timeranges.min()\n",
+    "        full_tcoord_range = -((full_duration_s/60) / 2), ((full_duration_s/60) / 2)\n",
+    " \n",
+    "        this_chunk_tcoord_range = [self.video_chunk_timeranges[idx][0]/60 - full_tcoord_range[1],\n",
+    "                                   self.video_chunk_timeranges[idx][1]/60 - full_tcoord_range[1]]\n",
+    "\n",
+    "        \n",
+    "        all_coords = get_mgrid(full_wf_tensor.shape, tcoord_range=this_chunk_tcoord_range)\n",
     "        \n",
     "                \n",
     "        model_input = {\n",
@@ -184,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input parameters:  {'ydim': 120, 'xrange': (30, 91), 'timerange': (0, 60), 'time_chunk_duration_s': 30, 'time_chunk_stride_s': 15, 'time_axis_scale': 0.5}\n",
+      "Input parameters:  {'ydim': 120, 'xrange': (30, 91), 'timerange': (0, 73), 'time_chunk_duration_s': 30, 'time_chunk_stride_s': 15, 'time_axis_scale': 0.5}\n",
       "Coordinates shape   (n,c):  torch.Size([900000, 3])\n",
       "Output tensor shape (n,c):  torch.Size([900000, 1])\n",
       "Output tensor shape (t,x,y):  torch.Size([150, 50, 120])\n",
@@ -205,7 +222,7 @@
     }
    ],
    "source": [
-    "param_dict = dict(ydim=120, xrange=(30,91), timerange=(0,60), time_chunk_duration_s=30, time_chunk_stride_s=15, \n",
+    "param_dict = dict(ydim=120, xrange=(30,91), timerange=(0,73), time_chunk_duration_s=30, time_chunk_stride_s=15, \n",
     "                  time_axis_scale=0.5)\n",
     "print(\"Input parameters: \",param_dict)\n",
     "wf_dataset = WaveformVideoDataset(**param_dict)\n",
@@ -246,9 +263,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range:  (0, 60)   stride:  15   chunk_timeranges: [(0, 30), (15, 45)]\n",
-      "range:  (10, 71)   stride:  15   chunk_timeranges: [(10, 40), (25, 55), (40, 70)]\n",
-      "range:  (0, 99)   stride:  15   chunk_timeranges: [(0, 30), (15, 45), (30, 60), (45, 75), (60, 90)]\n"
+      "range:  (0, 60)   stride:  15   chunk_timeranges: [[ 0 30]\n",
+      " [15 45]]\n",
+      "range:  (10, 71)   stride:  15   chunk_timeranges: [[10 40]\n",
+      " [25 55]\n",
+      " [40 70]]\n",
+      "range:  (0, 99)   stride:  15   chunk_timeranges: [[ 0 30]\n",
+      " [15 45]\n",
+      " [30 60]\n",
+      " [45 75]\n",
+      " [60 90]]\n"
      ]
     }
    ],
@@ -374,18 +398,23 @@
     "        return bstc\n",
     "\n",
     "class WaveformChunkDataset(Dataset):\n",
-    "    def __init__(self, wf_video_dataset, video_index=0, xy_bucket_sidelen=20, samples_per_xy_bucket=10, time_sample_interval=4, dataset_length=1000):\n",
+    "    def __init__(self, wf_video_dataset, video_index=0, xy_bucket_sidelen=20, samples_per_xy_bucket=10, time_sample_interval=4,\n",
+    "                 steps_per_video_chunk=1000):\n",
     "        self.wf_video_dataset = wf_video_dataset\n",
     "        self.video_index = video_index\n",
     "        self.xy_bucket_sidelen = xy_bucket_sidelen\n",
     "        self.samples_per_xy_bucket = samples_per_xy_bucket\n",
     "        self.time_sample_interval = time_sample_interval\n",
-    "        self.dataset_length = dataset_length\n",
+    "        self.steps_per_video_chunk = steps_per_video_chunk\n",
     "\n",
     "    def __len__(self):\n",
-    "        return self.dataset_length\n",
+    "        return len(self.wf_video_dataset) * self.steps_per_video_chunk\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
+    "        \n",
+    "        video_idx = int(idx // self.steps_per_video_chunk)\n",
+    "        t_idx = idx % self.steps_per_video_chunk\n",
+    "        \n",
     "        model_input, ground_truth = self.wf_video_dataset[self.video_index]\n",
     "        full_tensor_shape = ground_truth['full_tensor_shape']\n",
     "        all_wf_values_txyc = ground_truth['all_wavefront_values'].reshape(*full_tensor_shape, 1)\n",
@@ -394,16 +423,16 @@
     "        xy_subsampled_wf_values_bstc = subsample_strided_buckets(all_wf_values_txyc,\n",
     "                                                                 bucket_sidelength=self.xy_bucket_sidelen,\n",
     "                                                                 samples_per_bucket=self.samples_per_xy_bucket,\n",
-    "                                                                 sample_offset=idx)\n",
+    "                                                                 sample_offset=t_idx)\n",
     "        xy_subsampled_coords_bstc =    subsample_strided_buckets(all_coords_txyc,\n",
     "                                                                 bucket_sidelength=self.xy_bucket_sidelen,\n",
     "                                                                 samples_per_bucket=self.samples_per_xy_bucket,\n",
-    "                                                                 sample_offset=idx)\n",
+    "                                                                 sample_offset=t_idx)\n",
     "        \n",
     "        ti = self.time_sample_interval\n",
     "        \n",
-    "        subsampled_wf_values_bstc = xy_subsampled_wf_values_bstc[:,:,idx%ti::ti,:]        \n",
-    "        subsampled_coords_bstc =       xy_subsampled_coords_bstc[:,:,idx%ti::ti,:]\n",
+    "        subsampled_wf_values_bstc = xy_subsampled_wf_values_bstc[:,:,t_idx%ti::ti,:]        \n",
+    "        subsampled_coords_bstc =       xy_subsampled_coords_bstc[:,:,t_idx%ti::ti,:]\n",
     "        \n",
     "        model_input = {\n",
     "            'coords': subsampled_coords_bstc.reshape(-1, 3)\n",
@@ -415,8 +444,10 @@
     "            \"wavefront_values\": subsampled_wf_values_bstc.reshape(-1,1),\n",
     "            \"bst_shape\": subsampled_wf_values_bstc.shape[:3],\n",
     "            \"timerange\": ground_truth['timerange'],\n",
-    "            'time_sampling_offset': idx%ti\n",
+    "            'time_sampling_offset': t_idx%ti\n",
+    "\n",
     "        }\n",
+    "        \n",
     "        return model_input, ground_truth\n",
     "        "
    ]
@@ -466,6 +497,24 @@
     "print('coords bstc: ', bstc_coords.shape)\n",
     "print('wf_val bstc: ', bstc_wf_val.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
